--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-    "connectionString": "mongodb+srv://admin:admin@cluster0-lzar2.gcp.mongodb.net/payloads?retryWrites=true",
+    "connectionString": "mongodb+srv://dsd06:dsd06@cuong-project.gs1zt.mongodb.net/payloads?retryWrites=true&w=majority",
     "secret": "marchboy43"
 }
